# EtServer

./: .gitignore  CMakeLists.txt
res/protobuf/: ServerMessage.proto  build.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/proto/: GameMessage.pb.cc  GameMessage.pb.h  ServerMessage.pb.cc  ServerMessage.pb.h
src/common/server/: EtClientBase.cpp  EtClientBase.h  EtServerBase.cpp  EtServerBase.h
src/getway/: CMakeLists.txt  main.cpp
src/login/: CMakeLists.txt  main.cpp
